<resources>
    <string name="app_name">바디바디</string>
    <string name="app_description">바디바디 회원들과 실시간 채팅!</string>
    <string name="app_company_name">Powered by: %1$s</string>
    <string name="app_company">BodyBody</string>
    <string name="app_version">v %1$s</string>
    <string name="cDescription" />

    <string name="strSignIn">SIGN IN</string>
    <string name="strRegister">회원가입</string>
    <string name="strEmail">이메일</string>
    <string name="strUsername">사용자 이름</string>
    <string name="strPassword">비밀번호</string>
    <!--    <string name="strExistUser">Already have account? Sign In</string>-->
    <string name="strExistUser"><![CDATA[<font color=#9e9e9e>이미 계정을 갖고 있나요?</font> <b><font color=#0671da>Sign In</font></b>]]></string>
    <string name="strNewSignUp"><![CDATA[<font color=#9e9e9e>계정을 현재 갖고 있지 않나요?</font> <b><font color=#0671da>Sign up</font></b>]]></string>
    <string name="strReAuthenticate">Login</string>
    <string name="strMsgAuthenticate">현재 데이터를 복구할 수 없다면 계정을 삭제하세요.</string>
    <string name="strGroupAdmin">그룹 관리자</string>
    <string name="strCreatedOn">Created on %1$s</string>
    <string name="strParticipants">%1$d participants</string>

    <!-- Messages -->
    <string name="msg_please_wait">잠시만 기다려주세요!</string>
    <string name="msg_image_upload">업로드 중입니다...</string>
    <string name="strLogout">로그아웃</string>
    <string name="strTakeTour">둘러보세요!</string>
    <string name="strShareApp">바디바디 App 공유하기</string>
    <string name="strSettings">설정</string>
    <string name="strPrivacySetting">프라이버시 설정</string>
    <string name="strDeleteAccount">내 계정 삭제하기</string>

    <string name="strUserInfo">사용자 정보</string>
    <string name="strGroupView">그룹 정보</string>
    <string name="strClearMyChats">채팅 목록 비우기</string>
    <string name="strEditGroup">그룹 추가</string>
    <string name="strLeaveGroup">그룹 떠나기</string>
    <string name="strDeleteGroup">그룹 삭제</string>
    <string name="strExitGroup">그룹 나가기</string>
    <!-- Close message-->
    <string name="press_again_to_exit">다시 클릭해 앱을 종료하세요.</string>

    <string name="strChats">채팅</string>
    <string name="strUsers">유저 목록</string>
    <string name="strGroups">그룹 채팅</string>
    <string name="strProfile">프로필</string>
    <string name="strCreateNewGroup">그룹 생성</string>
    <string name="strSearch">검색...</string>
    <string name="strSearchWithCount">검색... (Total Users : %1$d)</string>

    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="strTyping">입력 중입니다...</string>
    <string name="strShareTitle">바디바디</string>
    <string name="strDeleteConversion">이 변환을 삭제하고 싶나요?</string>
    <string name="strOK">그래요.</string>
    <string name="strYes">네</string>
    <string name="strNo">아니요</string>
    <string name="strOneCount">9</string>
    <string name="strEmailSmall">이메일</string>
    <string name="strUsernameSmall">사용자 이름</string>
    <string name="strStatus">정보</string>
    <string name="strAboutStatus">안녕하세요~ 저와 운동 같이 하실래요?</string>
    <string name="strEnterAbout">상태 메세지</string>
    <string name="msgErrorEnterDesc">바디바디 회원들에게 자신을 소개하세요!</string>
    <string name="strDone">완료</string>
    <string name="strCancel">취소</string>

    <string name="strSelectGender">성별 선택</string>
    <string name="msgSelectGender">자신의 성별을 선택해주세요!</string>
    <string name="strGender">성별</string>
    <string name="strMale">남자</string>
    <string name="strFemale">여자</string>
    <string name="strUnspecified">지정되지 않았습니다.</string>
    <string-array name="arrGender">
        <item>@string/strMale</item>
        <item>@string/strFemale</item>
    </string-array>

    <!-- Filters -->
    <string name="strFilters">Filters</string>
    <string name="strFilterTitle">Filters</string>
    <string name="strFilterOnline">온라인/오프라인</string>
    <string name="strOnline">온라인</string>
    <string name="strOffline">오프라인</string>
    <string name="msgErrorUserOnline">온라인과 오프라인 중 하나만 선택하세요! </string>
    <string name="msgErrorGender">자신의 성별을 하나만 선택하세요.</string>
    <string name="strAllFieldsRequired">모든 항목을 채워야만 합니다.</string>
    <string name="strInvalidEmailPassword">이메일 또는 비밀번호를 잘못 입력하셨습니다.</string>
    <string name="strInvalidEmail">잘못된 이메일 주소입니다.</string>
    <string name="strEnterGroupName">그룹 이름 입력</string>
    <string name="msgEnterGroupName">그룹 이름을 입력해주세요.</string>
    <string name="msgGroupMoreThanOne">그룹을 만들려면 두 명 이상의 멤버를 추가해주세요.</string>
    <string name="msgTapToStartChat">그룹 채팅을 시작하려면 탭하세요.</string>
    <string name="strYou">You</string>
    <string name="strGroupInfo">그룹 정보를 보려면 탭하세요.</string>
    <string name="lblAboutUs">About us</string>
    <string name="lblPrivacyPolicy">프라이버시 정책</string>
    <string name="strEmptyMsg">빈 메세지는 보낼 수 없습니다.메세지를 입력해주세요.</string>
    <string name="msgOnlyAdminEdit">그룹 관리자만 편집 할 수 있습니다.</string>
    <string name="msgOnlyAdminDelete">그룹 관리자만 그룹을 삭제할 수 있습니다.</string>
    <string name="msgFailedToUpload">업로드에 실패하였습니다.</string>
    <string name="strNewMessage">새로운 메세지</string>
    <string name="strNewGroupMessage">새로운 그룹 메세지</string>
    <string name="strSelected">Selected :</string>
    <string name="msgUploadInProgress">진행 중인 업로드!</string>
    <string name="lblPhoto">사진</string>
    <string name="strDelete">삭제</string>
    <string name="strLeave">그룹 떠나기</string>
    <string name="strDeleteOwnChats">현재 채팅 데이터가 사라집니다. 채팅을 삭제하시겠습니까?</string>
    <string name="strLeaveFromGroup">이 그룹에서 떠나고 싶나요? (현재 그룹 채팅이 삭제됩니다.)</string>
    <string name="strDeleteWholeGroup">전체 그룹을 삭제 하시겠습니까? (모든 데이터도 삭제됩니다.)</string>
    <string name="strPhotoSent">Tap to view photo sent by %1$s</string>

    <string name="profile_setting">프로필 설정</string>
    <string name="general_setting">일반</string>
    <string name="notification">알림 공지</string>
    <string name="rtl">RTL (Right to Left)</string>

    <string name="ref_title">Refresh</string>
    <string name="ref_message">새로운 변경 사항을 반영하려면 앱이 자동으로 다시 시작됩니다.</string>
    <string name="logout_title">로그아웃</string>
    <string name="logout_message">로그아웃을 원하시나요?</string>

    <!-- New v1.4 -->
    <!-- New v1.4 -->
    <string name="strTypeYourMessage">메세지를 입력하세요!</string>
    <string name="msgNoImageSelected">이미지가 선택되지 않았습니다.</string>
    <string name="lblImage">이미지</string>
    <string name="lblAudio">오디오</string>
    <string name="lblVideo">비디오</string>
    <string name="lblDocument">문서 파일</string>
    <string name="lblContact">연락처</string>
    <string name="lblLocation">현재위치</string>
    <string name="lblVoiceRecording">보이스 레코딩</string>

    <string name="recording_cancelled">녹음이 취소되었습니다.</string>
    <string name="recording">녹음 중입니다...</string>
    <string name="msgFileNotFound">파일을 찾을 수 없습니다.</string>

    <string name="strProfilePic">프로필 사진</string>
    <string name="strWithPicture">프로필 사진이 있는 유저 보기</string>
    <string name="strWithoutPicture">프로필 사진이 없는 유저 보기</string>
    <string name="msgErrorProfilePicture">최소 1 개의 프로필 사진 옵션을 선택하세요.</string>

    <string name="titleSendMessages">메세지 보내기</string>
    <string name="lblMessageSetting">이 그룹에 메시지를 보낼 수있는 사람을 선택하세요!</string>
    <string name="lblAllParticipants">모든 유저 허용</string>
    <string name="lblOnlyAdmin">관리자만 허용</string>
    <string name="only_admin_can_send_messages"><![CDATA[오직 <strong><font color=#2196F3>관리자</font></strong>만 메세지를 보낼 수 있습니다.]]></string>
    <string name="settingVersion">App version %1$s</string>

    <string name="staticDate">01–01–2000</string>
    <string name="staticTime">01:01 AM</string>
    <string name="staticTimeZero">00:00</string>
    <string name="staticSize">123 KB</string>
    <string name="staticJPG">JPG</string>
    <string name="choose_file">파일 선택</string>
    <string name="choose_contact">연락처 선택</string>
    <string name="msgWaitingForFile">파일을 받는 중입니다... 기다려주세요.</string>
    <string name="msgChooseFileFromOtherLocation">적절한 위치에서 파일을 선택해주세요.</string>
    <!--    <string name="msgInvalidOrCorruptFile">Invalid or corrupted file.</string>-->
    <string name="msgInvalidOrCorruptFile">문서 파일</string>
    <string name="msgDownloadingStarted">다운로드가 시작되었습니다.</string>
    <string name="msgDownloadFile">다운로드 중... %1$s</string>
    <string name="lblInvite">초대하기</string>
    <string name="msgFileTooBig">용량 초과로 실패하였습니다. (max = %1$dMB)</string>
    <string name="strSlideToCancel">취소하려면 슬라이드해주세요.</string>
    <string name="msgGPSTurnOn">위치를 검색하려면 GPS를 키세요.</string>

    <string name="sliderTitle1">바디바디에 오신걸 환영합니다.</string>
    <string name="sliderTitle2">Chat anytime,\nanywhere</string>
    <string name="sliderTitle3">Make Ultimate\nGroup Chat</string>
    <string name="sliderTitle4">Send a Message,\nMedia, and Files</string>
    <string name="sliderTitle5">Received\nImportant Alert</string>

    <string name="sliderDesc1">친구와 가족 사이의 무료 채팅 연결은 모든 장치의 모든 곳에서 쉽고 모든 곳에서 쉽습니다.</string>
    <string name="sliderDesc2">모든 화면에서 정보를 전달하면 모든 장치가 즉시 간단하게 이루어집니다.</string>
    <string name="sliderDesc3">그룹 채팅을 만들고 연락을 유지하고 추억을 나누세요.</string>
    <string name="sliderDesc4">사진, 오디오, 비디오 및 기타 문서를 빠르고 빠르게 보내면서 바디바디 회원들과 대화를 나누세요.</string>
    <string name="sliderDesc5">친구가 당신과 채팅하려고 할 때 중요한 알림을 받습니다.</string>
    <string name="strNoGroupCreated">아직 생성된 그룹이 없어요.</string>
    <string name="strYouHaveNoGroups">그룹을 만들지 않은 것 같습니다!</string>
    <string name="strGallery">갤러리</string>
    <string name="strCamera">카메라</string>
    <string name="lblZeroPercentage">0 %</string>
    <string name="strZeroTimer">00:00:00 / 00:00:00</string>

    <string name="lblHideEmail">@string/strEmailSmall</string>
    <string name="lblHideProfilePhoto">프로필 사진</string>
    <string name="msgPrivateEmail">사용자의 개인 이메일</string>
    <string name="hide_profile">프로필 설정</string>
    <string name="msgHideProfile">다른 사용자가 프로필을 볼때 숨기기 또는 보여주기를 설정하세요.</string>

    <string name="strNoChatCreated">메세지가 아직 없어요.</string>
    <string name="strYouHaveNoChat">대화를 아직 시작하지 않은 것 같습니다.</string>
    <string name="strNoSearchFound">죄송합니다. 검색결과가 없습니다.</string>
    <string name="strForgetPassword">비밀번호를 잊으셨나요?</string>
    <string name="strForgetMsg">암호 재설정 지침을 복구하려면 아래에 등록 된 이메일을 아래에 입력하세요.</string>
    <string name="lblSendYouForgetEmail">받은 편지함을 확인하고 복구 된 링크를 클릭하여 비밀번호를 재설정하세요!</string>
    <string name="strSubmit">제출하기</string>

    <string name="lblOr">OR</string>
    <string name="strGoogleLogin">Sign in with Google</string>
    <string name="lblDeleteGoogle">바디바디 구글 계정 삭제하기</string>
    <string name="strEmailFieldsRequired">이메일 필드가 필요합니다.</string>

    <string name="strBlock">차단</string>
    <string name="strUnblock">차단 해제</string>
    <string name="msgBlockSuccessfully">성공적으로 차단 하였습니다.</string>
    <string name="msgUnblockSuccessfully">성공적으로 차단해제 하였습니다.</string>
    <string name="msgBlockForNotSend">해당 사용자가 차단하면 메시지를 보낼 수 없습니다.</string>
    <string name="msgUnblockToSend">Unblock %1$S to send a message</string>
    <string name="msgNoMessage">메세지가 없습니다.</string>
</resources>
