<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/expanded_toolbar_height"
                android:background="@color/amber_600"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/black"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/imgGroupBackground"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/cDescription"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/j"
                        android:visibility="visible" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/black_gradient" />
                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <include
                        android:id="@+id/toolbar_header_view"
                        layout="@layout/widget_header_view_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <include
            android:id="@+id/float_header_view"
            layout="@layout/widget_header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/scrollView"
            app:layout_behavior="com.bodybody.firebase.chat.activities.views.profileview.WhatsappHeaderBehavior" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewSendMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding5"
                    android:paddingBottom="@dimen/padding10"
                    app:cardElevation="@dimen/padding3">

                    <com.bodybody.firebase.chat.activities.views.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleColor="@color/grey_400"
                        app:mrl_rippleOverlay="true">

                        <LinearLayout
                            android:id="@+id/layoutGroupAdminSetting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/padding12">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_regular"
                                android:maxLines="1"
                                android:text="@string/titleSendMessages"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/font_sixteen" />

                            <TextView
                                android:id="@+id/lblSettingOption"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_regular"
                                android:maxLines="1"
                                android:text="그룹 채팅 관리자"
                                android:textColor="@color/greyText"
                                android:textSize="@dimen/font_twelve" />
                        </LinearLayout>
                    </com.bodybody.firebase.chat.activities.views.MaterialRippleLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/lblParticipants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="1"
                    android:padding="@dimen/padding10"
                    android:text="@string/strParticipants"
                    android:textColor="@color/grey_500"
                    android:textSize="@dimen/font_sixteen" />

                <include
                    layout="@layout/fragment_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding12"
                    app:cardElevation="@dimen/padding10">

                    <com.bodybody.firebase.chat.activities.views.MaterialRippleLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding15"
                        app:mrl_rippleColor="@color/grey_600"
                        app:mrl_rippleOverlay="true">

                        <TextView
                            android:id="@+id/txtExitGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/padding24"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="start|center_vertical"
                            android:paddingStart="@dimen/padding8"
                            android:paddingEnd="@dimen/padding8"
                            android:text="그룹 채팅 없애기"
                            android:textAlignment="viewStart"
                            android:textColor="@color/red_600"
                            android:textSize="@dimen/font_sixteen"
                            app:drawableStartCompat="@drawable/ic_set_exit_to_app"
                            app:drawableTint="@color/red_600" />
                    </com.bodybody.firebase.chat.activities.views.MaterialRippleLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>